# dbt-tui

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md
examples/example_dbt/: dbt_project.yml  profiles.yml
examples/example_dbt/macros/: cents_to_dollars.sql  date_spine.sql  generate_schema_name.sql  safe_divide.sql
examples/example_dbt/models/marts/core/: customers.sql  orders.sql  products.sql  schema.yml
examples/example_dbt/models/marts/finance/: payment_method_analysis.sql  schema.yml  (+1 more)
examples/example_dbt/models/staging/: sources.yml  stg_campaign_interactions.sql  stg_campaigns.sql  stg_customers.sql  stg_order_items.sql  stg_orders.sql  stg_payments.sql  stg_products.sql  stg_reviews.sql
examples/example_dbt/seeds/: countries.csv  discount_codes.csv  product_categories.csv
examples/example_dbt/tests/: assert_customer_revenue_consistency.sql  assert_order_total_positive.sql  assert_positive_total_orders.sql  assert_valid_profit_margin.sql
examples/postgres/: docker-compose.yml  init.sql
src/: action.rs  app.rs  component.rs  config.rs  main.rs  tui.rs
src/components/: detail.rs  documentation.rs  help_dialog.rs  history_dialog.rs  home.rs  info.rs  layout.rs  lineage.rs  mod.rs  quit_dialog.rs  run_options_dialog.rs  run_output_dialog.rs  sample_data_dialog.rs  setup.rs  splash.rs  sql_highlight.rs  table.rs  tag_filter_dialog.rs  target_selector.rs
src/model/: domain.rs  history.rs  lineage.rs  mod.rs  modal.rs  node.rs  run.rs  sample_data.rs  ui.rs
src/services/: dbt.rs  git.rs  job_runner.rs  manifest.rs  mod.rs  profile.rs  project.rs
(+3 files in other folders)
