[package]
name = "dbt-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
ratatui = "0.28"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
csv = "1.3"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0.100"
regex = "1.12.2"
unicode-width = "0.2"
